Fixed issue with scaling and added changed footer alignment

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,22 +1,27 @@
 body{
-  margin: 0px;
-	background-image: url("../assets/background_home.jpg");
+  margin: 0%;
+	padding: 0%;
+	height: auto;
+	background-color: black;
+	/* background-image: url("../assets/background_home.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: 100%;
-	height: auto;
+	height: auto; */
 }
-
+html {
+	height: 100%;
+}
 /* Main header css styles */
 .header {
   background-image: linear-gradient(to bottom right, #003250 , #0098F2 );
-  height: 120px;
+  height: 90px;
   position:sticky;
 	top: 0px;
 	box-shadow: 0px 0px 10px black;
 }
 .header-logo {
-  height: 120px;
+  height: 90px;
   position: absolute;
   top: 5px;
   left: 35px;
@@ -24,7 +29,7 @@ body{
 .button-group {
   position: absolute;
   right: 30px;
-  top: 35px;
+  top: 24px;
   width: 210px;
 	height: auto;
 }
@@ -62,32 +67,20 @@ body{
 .register-button:hover {
 	background-color:black;
 }
-
-
-
-
 /* Main body css styles */
 .main-body {
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	align-items: center;
 	text-align: center;
-	margin-top: 200px;
-	height: 600px;
+	height: 100vh;
+	background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url("../assets/background_home.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover
 }
-/* .body-background {
-	margin-left: auto;
-	margin-right: auto;
-	width: 100%;
-	height: auto;
-	display: block;
-	overflow: hidden;
-} */
 .body-content {
 	display: block;
 	width: 100%;
-	margin-top: 0px
+	padding-top: 30vh;
 }
 .body-text-header {
 	font-family: Arial, Helvetica, sans-serif;
@@ -114,42 +107,47 @@ body{
   border: none;
   width: 150px;
 }
-
-
 /* Footer CSS styles */
 .footer {
 	display: block;
-	bottom: 0px;
-	height: 120px;
-	background-color: #636363;
+	height: 100px;
+	width: 100%;
+	background-color: #292929;
+	position: absolute;
+	text-align: center;
+	box-shadow: 0px 0px 10px black;
 }
 .logo-row {
-	text-align: center;
 	word-spacing: 25px;
 	position: relative;
-	top: 15px;
+	top: 24px;
 }
 .social-image {
 	width: auto;
 	height: auto;
 }
-@media only screen and (max-width:1106px){
-	.body-background {
-		margin-left: auto;
-		margin-right: auto;
-		width: auto;
-		height: 100%;
-		display:block;
-		overflow: hidden;
-	}
+.copyright {
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	color: white;
+	margin: 0px;
+	display: inline-block;
+	position: relative;
+	top: 30px;
+	font-size: 12px;
+	word-spacing: 4px;
 }
+
+
 @media only screen and (max-width:600px){
 	.header {
-		height: 180px;
+		height: auto;
 		display: static;
+		padding-bottom: 4px;
+		padding-top: 4px;
 	}
 	.header-logo {
-		height: 110px;
+		height: 90px;
 		position: static;
 		display: block;
 		margin: auto;
@@ -158,5 +156,17 @@ body{
 		position: static;
 		display: block;
 		margin: auto;
+		margin-bottom: 10px;
+	}
+	.body-text-header {
+		font-family: Arial, Helvetica, sans-serif;
+		color: white;
+		font-size: 40px;
+		margin-top: 0px;
+	}
+	.body-text-paragraph {
+		font-family: Arial, Helvetica, sans-serif;
+		color: white;
+		font-size: 20px;
 	}
 }
